fix alignment

--- a/style/screen.css
+++ b/style/screen.css
@@ -54,7 +54,6 @@ nav {
   width: 100%;
   height: 63px;
   padding: 0px 10px;
-  
   background-color: white;
   color: #000000;
   display: flex;
@@ -94,8 +93,9 @@ nav span {
   nav p {
     font-size: 20px;
   }
-  nav span {
-    display: none;
+  nav a {
+    font-size: 15px;
+    padding: 2px 8px;
   }
 }
 
@@ -132,7 +132,7 @@ footer {
 
 #banner .container {
   width: 100%;
-  max-width: 900px;
+  max-width: 960px;
 }
 
 #banner > * {
@@ -140,7 +140,7 @@ footer {
 }
 
 #banner h1 {
-  margin-top: 50px;
+  margin-top: 30px;
   font-weight: bold;
 }
 
@@ -177,7 +177,7 @@ footer {
 }
 
 .description .container {
-  max-width: 1000px;
+  max-width: 960px;
 }
 
 #illustration p {
